# taskee

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
src/taskee/: __init__.py  dispatcher.py  events.py  operation.py  taskee.py  tasks.py  utils.py
src/taskee/cli/: cli.py  styles.py
src/taskee/cli/commands/: dashboard.py  log.py  tasks.py  test.py
src/taskee/notifiers/: __init__.py  native.py  notifier.py  pushbullet.py
taskee/: __init__.py  cli.py  dispatcher.py  events.py  states.py  taskee.py  tasks.py  utils.py  watch.py
taskee/cli/: cli.py  dashboard.py  log.py  logger.py  styles.py  table.py  tasks.py  tree.py
taskee/cli/commands/: dashboard.py  log.py  tasks.py  test.py
taskee/notifiers/: __init__.py  native.py  notifier.py  pushbullet.py
taskee/terminal/: __init__.py  colors.py  settings.py  tables.py
tests/: conftest.py  mock_operation.py  mock_tasks.py  test_cli.py  test_events.py  test_notifiers.py  test_operation.py  test_taskee.py  test_tasks.py  test_utils.py
